--- a/app/build.gradle
+++ b/app/build.gradle
@@ -169,7 +169,7 @@ sonarqube {
     properties {
         property "sonar.projectName", "GoBees"
         property "sonar.projectKey", "com.davidmiguel.gobees"
-        property "sonar.projectVersion", versionName
+        property "sonar.projectVersion", "${android.defaultConfig.versionName}"
         property "sonar.exclusions", "**/*.png,**/*.jpg"
         property "sonar.android.lint.report", "./build/outputs/lint-results-mockDebug.xml"
         property "sonar.junit.reportsPath", "./build/test-results/mockDebug"
