--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ android {
         applicationId "com.davidmiguel.gobees"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 10
-        versionName "v1.0"
+        versionCode 11
+        versionName "v1.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -170,7 +170,7 @@ sonarqube {
         property "sonar.projectName", "GoBees"
         property "sonar.projectKey", "com.davidmiguel.gobees"
         property "sonar.language", "java"
-        property "sonar.projectVersion", "${android.defaultConfig.versionName}"
+        property "sonar.projectVersion", "1.1"
         property "sonar.exclusions", "**/*.png,**/*.jpg"
         property "sonar.android.lint.report", "./build/outputs/lint-results-mockDebug.xml"
         property "sonar.junit.reportsPath", "./build/test-results/mockDebug"
