--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@
  * You should have received a copy of the GNU General Public License
  * along with this program. If not, see <https://www.gnu.org/licenses/gpl-3.0.txt>.
  */
+//hemos anadido una linea de comentario.
 
 apply plugin: 'com.android.application'
 apply plugin: 'jacoco-android'
