--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,8 @@
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
 
+# asfdfeafsdfsdafsda fwrwsadrfwqefsda fasdffasfasfas fasdfas
+
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 
